# lerobot-curate

./: .gitignore  .lerobot-curate-progress.json  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml
results/: v0.1.0a1_metrics.json
scripts/: heartbeat.py  render_readme_metrics.py  run_metrics.py  verify_step.py
src/lerobot_curate/: __init__.py  cli.py  curate.py  diagnostics.py  ir.py  metrics.py
src/lerobot_curate/core/: __init__.py  dedup.py  diversity.py  mislabel.py  signature.py
src/lerobot_curate/embed/: __init__.py  base.py  hf_api.py  local_onnx.py  stub.py
src/lerobot_curate/io/: __init__.py  lerobot_v3.py  materialize.py  synthetic.py
tests/: test_cli.py  test_dedup.py  test_diversity.py  test_embed.py  test_io.py  test_ir.py  test_materialize.py  test_metrics.py  test_mislabel.py  test_pipeline.py  test_signature.py
