[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lerobot-curate"
dynamic = ["version"]
description = "CPU-only curation/selection of LeRobot v3 robot datasets before VLA fine-tuning: embedding dedup, signature-kernel diversity subset selection, and cross-modal mislabel flagging."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "hinanohart" }]
keywords = ["lerobot", "robotics", "vla", "dataset", "curation", "dedup", "diversity", "signature-kernel"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
]
# Core stays torch-free. Real embedder (onnxruntime) and frame decode (av) are
# opt-in extras so CI and the deterministic stub path install nothing heavy.
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "huggingface_hub>=0.23",
    "pyarrow>=14",
    "typer>=0.12",
    "rich>=13",
]

[project.optional-dependencies]
onnx = ["onnxruntime>=1.17", "pillow>=10"]
video = ["av>=11"]
lerobot = ["lerobot>=0.1"]
opencv = ["opencv-python-headless>=4.8"]
fiftyone = ["fiftyone>=0.23"]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
    "mypy>=1.11",
    "vendi-score>=0.0.3",
    "check-manifest>=0.49",
    "build>=1.2",
]

[project.urls]
Homepage = "https://github.com/hinanohart/lerobot-curate"
Repository = "https://github.com/hinanohart/lerobot-curate"

[project.scripts]
lerobot-curate = "lerobot_curate.cli:app"

[tool.hatch.version]
path = "src/lerobot_curate/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/lerobot_curate"]

[tool.hatch.build.targets.sdist]
include = ["src/lerobot_curate", "LICENSE", "README.md"]
exclude = ["*.onnx", "*.safetensors", "*.bin", "*.pt", "*.parquet"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
files = ["src/lerobot_curate"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
filterwarnings = [
    # vendi-score 0.0.3 triggers a scipy.sparse deprecation internally (not our code)
    "ignore:.*scipy.sparse.csr.*:DeprecationWarning",
]
markers = [
    "live: requires real ONNX embedder weights or network (skipped by default)",
    "hf_api: requires Hugging Face Inference API credentials",
    "extra: requires an optional extra (lerobot/opencv/fiftyone)",
]
